SwiftLintにルールを追加した。クロージャーの後ろにスペースを入れた。

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -17,3 +17,6 @@ variable_name_min_length:
 function_body_length:
 - 100 # warning
 - 200 # error
+opt_in_rules:
+- closure_end_indentation # クロージャの{と}は同じインデント
+- closure_spacing # クロージャの{の後と}の前にはスペース
