--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -15,11 +15,12 @@ variable_name_min_length:
 - 1 # warning
 - 0 # error
 function_body_length:
-- 100 # warning
-- 200 # error
+- 150 # warning
 opt_in_rules:
 - closure_end_indentation # クロージャの{と}は同じインデント
 - closure_spacing # クロージャの{の後と}の前にはスペース
+- vertical_whitespace_opening_braces # 中括弧を開く前に空白行を設けたいことがあるため
+- vertical_whitespace_closing_braces # 中括弧を閉じる前に空白行を設けたいことがあるため
 identifier_name:
   min_length: 1
   max_length: 40
